Adds T&C, Privacy Policy, insights
